static/css/inbox.less
/* ... */
.messages .inbox-items li {
  .message-wrapper:hover {
    border-left-color: @messages-color;
  }
  &.selected {
    background-color: lighten(@messages-color, 30%);
  }
}

.tasks .inbox-items li {
  .message-wrapper:hover {
    border-left-color: @tasks-color;
  }
  &.selected {
    background-color: lighten(@tasks-color, 25%);
  }
}

.reports {
  .inbox-items li {
    .message-wrapper:hover {
      border-left-color: @reports-color;
    }
    &.selected {
      background-color: lighten(@reports-color, 30%);
    }
    input[type="checkbox"] {
      display: none;
      float: left;
      height: 2em;
    }
  }
  &.select-mode .inbox-items li {
    input[type="checkbox"] {
      display: inline;
    }
    .message-wrapper {
      padding-left: 0;
    }
    .detail {
      margin-left: 4em;
    }
  }
}

.contacts {
  .inbox-items li {
    .message-wrapper:hover {
      border-left-color: @contacts-color;
    }
    &.selected {
      background-color: lighten(@contacts-color, 30%);
    }
    &.orphan .detail {
      margin-top: 0.42em;
    }
  }
  .item-content {
    .contact-tasks {
      vertical-align: middle;
    }
    li li {
      padding-top: 0.5em;
    }
    .meta {
      padding: 1em 0;
    }
    h2 {
      margin-bottom: 0;
    }
  }
}

.tasks {
  .inbox-items .mm-badge {
    padding-top: 0;
    margin-top: 0;
  }
  .item-content .actions a {
    margin-right: 1em;
  }
}

.contacts .message-wrapper .fa {
  color: @ok-color;
}

.inbox-items {
  padding: 0;
  background-color: @form-background-color;
  border-left: 1px solid @seperator-color;

  ul {
    margin-bottom: 0;
  }

  li {
    border-bottom: 1px solid @seperator-color;
    cursor: pointer;
    white-space: nowrap;
    overflow: hidden;

    span {
      white-space: normal;
    }

    .mm-badge {
      float: left;
    }

    .message-wrapper {
      padding: 1em;
      border-left: 5px solid transparent;
      min-height: 4em;
      display: block;
      text-decoration: none;
      color: inherit;
      outline: 0;
    }
  }

  .read {
    background-color: @background-color;
    .sender .name {
      font-weight: normal;
    }
  }

  .detail .description {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .sender .phone {
    display: none;
  }

  .alert {
    margin: 1em;
  }

  .time {
    margin-left: 1em;
  }

  .padding {
    height: 150px;
  }

}

.loading-status {
  margin: 1em;
  text-align: center;
  font-weight: bold;
}

.scheduled-tasks .loader {
  font-size: 6px;
}

.reports, .contacts {
  .inbox-items .detail {
    margin-left: 3em;
  }
}

.messages .inbox-items .detail {
  padding-right: 0.5em;
}

.task-state {
  color: #AAAAAA;
  .state {
    font-weight: bold;
    &:before {
      content: '\f111';
      font-family: FontAwesome;
      font-size: 0.8em;
      margin-right: 0.5em;
    }
    &.received:before {
      content: '';
      margin-right: 0;
    }
    &.pending:before {
      color: @pending-state-color;
    }
    &.muted:before {
      color: @muted-state-color;
    }
    &.cleared:before {
      color: @cleared-state-color;
    }
    &.sent:before {
      color: @sent-state-color;
    }
    &.scheduled:before {
      color: @scheduled-state-color;
    }
  }
}

.item-content {
  padding: 0;
  border: 1px solid @seperator-color;
  border-width: 0 1px;
  .status {
    clear: both;
    font-size: 1.5em;
    text-align: center;
    margin-bottom: -1.3em;
  }
  .body p {
    word-wrap: break-word;
    margin: 0;
  }
  > div {
    margin-top: 1em;
    &.enketo, &.material {
      margin-top: 0;
    }
  }
  .padding {
    height: 10em;
    clear: left;
  }
}

.incomplete .body h2 {
  color: @error-color;
}

a.fa:hover {
  text-decoration: none;
}

.messages .item-content .body {
  .actions {
    width: 2em;
    float: right;
    visibility: hidden;
    a {
      padding: 0.5em;
    }
  }
  .data {
    padding: 1em;
    margin-right: 1.5em;
  }
  .marker {
    color: @grey;
    font-size: 0.8em;
    font-weight: bold;
    background-color: @background-color;
    margin: 1em 0;
    padding: 0.5em;
    text-align: center;
    box-shadow: 0 5px 5px 0 rgba(50, 50, 50, 0.45);
    position: relative;
    &:after {
      position: absolute;
      bottom: -1em;
      left: 48%;
      border-style: solid;
      border-color: @background-color transparent;
      display: block;
      width: 0;
      border-width: 15px 15px 0;
      content: "";
      margin: 0 auto;
    }
  }
  & > ul {
    > li {
      clear: both;
      > span {
        background-color: #ffffff;
        border: 1px solid @seperator-color;
        border-radius: @radius-size;
        margin-top: 0.5em;
        margin-bottom: 0.5em;
      }
    }
    .message-body:hover, .selected {
      .actions {
        visibility: visible;
      }
    }
    .message-body {
      display: inline-block;
    }
    .message-body, .message-body p {
      max-width: 100%;
    }
    .incoming .message-body {
      border-color: @received-state-color;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-left: 0;
      margin-right: 1em;
    }
    .outgoing .message-body {
      border-color: @messages-color;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-right: 0;
      margin-left: 1em;
      &, p {
        float: right;
      }
    }
    .task-state {
      clear: right;
      display: block;
    }
  }
}
/* ... */

